# tiles-engine

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  package.json
.agents/: README.md  agents.yaml
.github/: PULL_REQUEST_TEMPLATE.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/native-preview/: Cargo.toml
apps/native-preview/src/: main.rs
docs/: animation-clip-schema-v0.md  attached-light-source-schema-v0.md  auto-tile-map-painter-mvp.md  camera-overlay-pass.md  character-bake-manifest-pipeline.md  curated-component-rule-schema-v0.md  delivery-process.md  desktop-native-preview-launch.md  desktop-save-load-ui-prototype.md  dialogue-asset-schema-v0.md  domain-action-runtime-evaluator-mvp.md  editor-selection-model-mvp.md  embedded-native-viewport-feasibility.md  exported-game-launch-path.md  exported-game-save-storage-adapter.md  five-view-humanoid-assembly-prototype.md  generic-interaction-runtime-slice.md  generic-interaction-systems.md  github-setup.md  humanoid-character-creator-mvp.md  humanoid-character-recipe-schema-v0.md  humanoid-creator-definition-schema.md  interaction-trigger-schema-v0.md  licensing.md  lightweight-semantic-rig-schema-v0.md  live-scene-streaming-native-preview.md  material-runtime-state-schema-v0.md  menu-settings-editor-panel.md  menu-settings-schema-v0.md  menus-save-load-after-runtime-preview.md  multiple-atlases-per-frame.md  overlay-primitive-library-mvp.md  overlay-text-vector-primitives-design.md  packaged-asset-reload-policy.md  packaged-preview-binary-lookup.md  palette-slot-system-schema-v0.md  particle-emitter-preset-schema-v0.md  procedural-world-generation-inputs.md  product-plan.md  project-format-v0.md  (+35 more)
schemas/: tiles-animation-clip.schema.json  tiles-asset-registry.schema.json  tiles-attached-light-source.schema.json  tiles-character-bake-manifest.schema.json  tiles-curated-components.schema.json  tiles-dialogue-asset.schema.json  tiles-export-manifest.schema.json  tiles-humanoid-character-recipe.schema.json  tiles-humanoid-creator.schema.json  tiles-humanoid-part-pack.schema.json  tiles-interaction-trigger.schema.json  tiles-map.schema.json  tiles-material-state.schema.json  tiles-menu-settings.schema.json  tiles-palette-slot-system.schema.json  tiles-project-manifest.schema.json  (+13 more)
(+136 files in other folders)
