[workspace]
resolver = "2"
members = [
  "crates/tiles-core",
  "crates/tiles-renderer",
  "crates/tiles-runtime",
  "apps/native-preview",
  "apps/desktop/src-tauri"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/TordAreStromsnes/tiles-engine"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tiles-core = { path = "crates/tiles-core" }
tiles-renderer = { path = "crates/tiles-renderer" }
tiles-runtime = { path = "crates/tiles-runtime" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
