[workspace]
resolver = "2"
members = [
  "crates/tiles-core",
  "crates/tiles-renderer",
  "crates/tiles-runtime",
  "apps/native-preview",
  "apps/desktop/src-tauri"
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TordAreStromsnes/tiles-engine"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-shell = "2"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
tiles-core = { path = "crates/tiles-core" }
tiles-renderer = { path = "crates/tiles-renderer" }
tiles-runtime = { path = "crates/tiles-runtime" }
wgpu = "0.19"
winit = "0.29"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
