[package]
name = "tiles-native-preview"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytemuck.workspace = true
pollster.workspace = true
serde_json.workspace = true
tiles-renderer.workspace = true
tiles-runtime.workspace = true
wgpu.workspace = true
winit.workspace = true
