[package]
name = "tiles-engine-desktop"
version = "0.1.0"
description = "Tiles Engine desktop editor shell"
authors = ["Tiles Engine contributors"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tiles-core.workspace = true
